--- a/app/src/renderer/index.html
+++ b/app/src/renderer/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link href="tailwind.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
+    </head>
     <body>
         <div id="react-root"></div>
         <script src="index.tsx"></script>
